--- a/JNIMathCpp01/.cproject
+++ b/JNIMathCpp01/.cproject
@@ -4,7 +4,7 @@
 		<cconfiguration id="cdt.managedbuild.toolchain.gnu.base.775287739">
 			<storageModule buildSystemId="org.eclipse.cdt.managedbuilder.core.configurationDataProvider" id="cdt.managedbuild.toolchain.gnu.base.775287739" moduleId="org.eclipse.cdt.core.settings" name="Default">
 				<macros>
-					<stringMacro name="ProjHome" type="VALUE_PATH_DIR" value="/home/stream/eclipse-workspace/JNIMath01"/>
+					<stringMacro name="ProjHome" type="VALUE_PATH_DIR" value="/home/stream/eclipse-workspace/JNIMathCpp01"/>
 				</macros>
 				<externalSettings/>
 				<extensions>
@@ -56,12 +56,12 @@
 		</cconfiguration>
 	</storageModule>
 	<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-		<project id="JNIMath01.null.196270785" name="JNIMath01"/>
+		<project id="JNIMathCpp01.null.196270785" name="JNIMathCpp01"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="refreshScope" versionNumber="2">
 		<configuration configurationName="Default">
-			<resource resourceType="PROJECT" workspacePath="/JNIMath01"/>
+			<resource resourceType="PROJECT" workspacePath="/JNIMathCpp01"/>
 		</configuration>
 	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
