--- a/JNIMathCpp01/.project
+++ b/JNIMathCpp01/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JNIMath01</name>
+	<name>JNIMathCpp01</name>
 	<comment></comment>
 	<projects>
 	</projects>
