--- a/JNIMathCpp01/.cproject
+++ b/JNIMathCpp01/.cproject
@@ -60,6 +60,9 @@
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
 	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Clean">
+			<resource resourceType="PROJECT" workspacePath="/JNIMathCpp01"/>
+		</configuration>
 		<configuration configurationName="Default">
 			<resource resourceType="PROJECT" workspacePath="/JNIMathCpp01"/>
 		</configuration>
