--- a/JNIMathCpp01/makefile
+++ b/JNIMathCpp01/makefile
@@ -6,7 +6,7 @@ INC=include/
 LIB=lib/
 BIN=bin/
 GIT=/home/${USER}/git/JNIMath/
-HOM=./
+HOM=$(GIT)JNIMathCpp01/
 JVA=$(GIT)JNIMath/src/de/iworks/jni/math/JNIMath.java
 JVH=/opt/ace-12.0.5.0/common/jdk/include/
 JVL=$(JVH)linux/
